--- a/markup/components/grid/grid.styl
+++ b/markup/components/grid/grid.styl
@@ -34,6 +34,10 @@ grid-modifiers = ( one two three four five six seven eight nine ten elevel twelv
         &_push_bottom
             margin-top: auto
 
+        &_push_center
+            margin-left: auto
+            margin-right: auto
+
         for i in range(0,(length(grid-modifiers) - 1))
             &_{grid-modifiers[i]}
                 width (i + 1) * grid-col-width
