--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -42,6 +42,7 @@ block content
             +demo-link('user-feeds.html') 06/User/Feeds
             +demo-link('#registration-popup')(data-popup-id='#registration-popup' data-action='show').js-toggle-popup 05/Registration_1,1
             +demo-link('#login-popup')(data-popup-id='#login-popup' data-action='show').js-toggle-popup 05/Registration_1,2
+            +demo-link('registration.html') 05/Registration_2,1
     +arrow-up
 
 block popups
