--- a/markup/components/popup-welcome/popup-welcome.pug
+++ b/markup/components/popup-welcome/popup-welcome.pug
@@ -15,5 +15,5 @@ mixin popup-welcome()
                     +count-info('Agency’s', '2154').__count-info
                 +e.buttons
                     +button()._uppercase._bg_grey._color_main.__button.js-popup-welcome-accept yes, I have 18
-                    +button()(data-popup-id='#popup-welcome' data-action='hide')._uppercase._border_grey.__button.js-toggle-popup no, I don’t have 18
+                    +button()(data-popup-id='#popup-welcome' data-action='hide')._uppercase._border_grey._color_white.__button.js-toggle-popup no, I don’t have 18
                     +e.A(href='#').terms Terms of use
