--- a/markup/components/registration/registration.pug
+++ b/markup/components/registration/registration.pug
@@ -3,13 +3,14 @@ include ../info-control/info-control
 include ../button/button
 include ../field/field
 include ../heading/heading
+include ../file/file
 
 mixin registration()
     +b.registration&attributes(attributes)
         +container
             +heading Registration
 
-            +grid.FORM(method='post' action='#')
+            +grid.FORM(method='post' action='#' enctype='multipart/form-data')
                 +col(4)
                     +info-control('radio', 'profile-type', 'regular', true)._light Regular member
                 +col(4)
@@ -33,7 +34,7 @@ mixin registration()
                 +col(12)
                     +field
                         +field-label Avatar
-                        +field-input
+                        +file.DIV
 
                 +col(4)
                     +field
