--- a/markup/components/avatar/avatar.styl
+++ b/markup/components/avatar/avatar.styl
@@ -1,5 +1,8 @@
 .avatar
     position: relative
+    display: block
+    overflow: hidden
+    border-radius: 50%
 
     &_size_small
         width: 40px
