--- a/markup/components/file/file.pug
+++ b/markup/components/file/file.pug
@@ -1,6 +1,6 @@
-mixin file(placeholder, name)
+mixin file(placeholder, name, accept)
     +b.LABEL.file&attributes(attributes)
-        +e.text=placeholder||'Select the file or drag and drop them here'
-        +e.INPUT(type='file' name=name||'file').control
+        +e.text(data-placeholder=placeholder)=placeholder||'Select the file or drag and drop them here'
+        +e.INPUT(type='file' name=name||'file' accept=accept).control
         +e.button
             != pugHelpers.Icon.call(locals, {iconName: 'plus', className: 'file__icon', iconWidth: '14', iconHeight: '14'})
