--- a/markup/pages/registration.pug
+++ b/markup/pages/registration.pug
@@ -21,6 +21,7 @@ block popups
 
 block scripts
     script(src='https://www.google.com/recaptcha/api.js')
+    script(src='%=static=%js/separate-js/ajax/registration.js')
 
 block footer
     +footer
