--- a/markup/components/registration/registration.pug
+++ b/markup/components/registration/registration.pug
@@ -26,7 +26,7 @@ mixin registration()
                 +col(4)
                     +field
                         +field-label Nickname
-                        +field-input
+                        +field-input-ok
                 +col(4)
                     +field
                         +field-label Email
