--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -40,8 +40,7 @@ block content
             +demo-link('user-following.html') 06/User/Following
             +demo-link('user-activity.html') 06/User/Activity
             +demo-link('user-feeds.html') 06/User/Feeds
-            +demo-link('#registration-popup')(data-popup-id='#registration-popup' data-action='show').js-toggle-popup 05/Registration_1,1
-            +demo-link('#login-popup')(data-popup-id='#login-popup' data-action='show').js-toggle-popup 05/Registration_1,2
+            +demo-link('#auth-popup')(data-popup-id='#auth-popup' data-action='show').js-toggle-popup 05/Registration_ (1,1 1,2)
             +demo-link('registration.html') 05/Registration_2,1
     +arrow-up
 
@@ -55,8 +54,7 @@ block popups
     +profile-common-popup-report
     +profile-video-popup
     +profile-photo-popup
-    +registration-popup
-    +login-popup
+    +auth-popup
 
 block footer
     +footer
