--- a/markup/components/field/field.styl
+++ b/markup/components/field/field.styl
@@ -37,3 +37,11 @@
         font-family fontMain
         font-size 16px
         font-weight 400
+
+    &__description
+        display: block
+        margin-top: 20px
+        color rgba(darkGreyColor, .59)
+        font-family fontMain
+        font-size 16px
+        font-weight 400
