--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -40,8 +40,9 @@ block content
             +demo-link('user-following.html') 06/User/Following
             +demo-link('user-activity.html') 06/User/Activity
             +demo-link('user-feeds.html') 06/User/Feeds
-            +demo-link('#auth-popup')(data-popup-id='#auth-popup' data-action='show').js-toggle-popup 05/Registration_ (1,1 1,2)
-            +demo-link('registration.html') 05/Registration_2,1
+            +demo-link('#auth-popup')(data-popup-id='#auth-popup' data-action='show').js-toggle-popup 05/Registration_ (1,1, 1,2)
+            +demo-link('registration.html') 05/Registration_(2,1, 2,2)
+            +demo-link('phone-number.html') 05/Registration_3,2
     +arrow-up
 
 block popups
