--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -43,6 +43,7 @@ block content
             +demo-link('#auth-popup')(data-popup-id='#auth-popup' data-action='show').js-toggle-popup 05/Registration_ (1,1, 1,2)
             +demo-link('registration.html') 05/Registration_(2,1, 2,2)
             +demo-link('phone-number.html') 05/Registration_3,2
+            +demo-link('registration-success.html') 05/Registration_3,4
     +arrow-up
 
 block popups
