--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -44,6 +44,7 @@ block content
             +demo-link('registration.html') 05/Registration_(2,1, 2,2)
             +demo-link('phone-number.html') 05/Registration_3,2
             +demo-link('registration-success.html') 05/Registration_3,4
+            +demo-link('user-fill-profile.html') 06/Reg_p2_1
     +arrow-up
 
 block popups
