user-fill-profile 1st screen

--- a/markup/components/file/file.styl
+++ b/markup/components/file/file.styl
@@ -64,6 +64,7 @@
 
     &_column
         flex-direction: column
+        height: initial
 
         & ^[0]__text
             display: inline-block
