--- a/markup/components/user-fill-profile/user-fill-profile.styl
+++ b/markup/components/user-fill-profile/user-fill-profile.styl
@@ -21,3 +21,17 @@
 
     &__masonry-item:not(:last-child)
         margin-bottom: 24px
+
+    &__action
+        width: 100%
+        margin-top: 16px
+
+    &__section
+
+        .heading
+            margin-bottom: 11px
+
+        &:not(:first-child)
+            margin-top: 40px
+            padding-top: 35px
+            border-top: 1px solid borderColor
