user-fill-profile 2

--- a/markup/components/field/field.pug
+++ b/markup/components/field/field.pug
@@ -3,7 +3,7 @@ mixin field
         block
 
 mixin field-label
-    +e.SPAN.label&attributes(attributes)
+    +e.DIV.label&attributes(attributes)
         block
 
 mixin field-input
