--- a/markup/components/field/field.styl
+++ b/markup/components/field/field.styl
@@ -31,7 +31,9 @@
                 padding-right: 50px
 
     &__label
-        display: block
+        display: flex
+        justify-content: space-between
+        align-items: center
         margin-bottom: 17px
         color darkGreyColor
         font-family fontMain
