--- a/markup/pages/index.pug
+++ b/markup/pages/index.pug
@@ -45,6 +45,14 @@ block content
             +demo-link('phone-number.html') 05/Registration_3,2
             +demo-link('registration-success.html') 05/Registration_3,4
             +demo-link('user-fill-profile.html') 06/Reg_p2_1
+            +demo-link('user-fill-profile2.html') 06/Reg_p2_2
+            +demo-link('user-fill-profile3.html') 06/Reg_p2_3
+            +demo-link('user-fill-profile4.html') 06/Reg_p2_4
+            +demo-link('user-fill-profile5.html') 06/Reg_p2_5
+            +demo-link('user-fill-profile6.html') 06/Reg_p2_6
+            +demo-link('user-fill-profile7.html') 06/Reg_p2_7
+            +demo-link('user-fill-profile8.html') 06/Reg_p2_8
+            +demo-link('user-fill-profile9.html') 06/Reg_p2_9
     +arrow-up
 
 block popups
