--- a/markup/components/checkbox/checkbox.styl
+++ b/markup/components/checkbox/checkbox.styl
@@ -1,6 +1,7 @@
 .checkbox
     cursor pointer
-    display inline-block
+    display inline-flex
+    align-items: center
 
     &__input
         display none
@@ -12,11 +13,12 @@
             background-color mainColor
 
             svg
-                fill white
+                transform: scale(1)
 
     &__box
-        display inline-block
-        vertical-align middle
+        display: flex
+        align-items: center
+        justify-content: center
         width 24px
         height 24px
         border 1px solid borderColor
@@ -39,3 +41,9 @@
 
         & ^[0]__text
             color #fff
+
+    svg
+        transform: scale(0)
+        transition(transform)
+        flex-shrink: 0
+        fill #fff
