--- a/markup/components/user-fill-profile/user-fill-profile.styl
+++ b/markup/components/user-fill-profile/user-fill-profile.styl
@@ -28,10 +28,17 @@
 
     &__section
 
-        .heading
+        & > .heading
             margin-bottom: 11px
 
         &:not(:first-child)
             margin-top: 40px
             padding-top: 35px
             border-top: 1px solid borderColor
+
+    &__add-btn
+        width: 100%
+        height: 60px
+
+        .icon-button__icon
+            fill: mainColor
